--- a/web/index.html
+++ b/web/index.html
@@ -4505,11 +4505,11 @@ var author$project$Main$UrlChanged = function (a) {
 	return {$: 'UrlChanged', a: a};
 };
 var author$project$Main$NotFound = {$: 'NotFound'};
-var author$project$Main$FeatureListMsg = function (a) {
-	return {$: 'FeatureListMsg', a: a};
+var author$project$Main$AddFeatureMsg = function (a) {
+	return {$: 'AddFeatureMsg', a: a};
 };
-var author$project$Main$FeatureListPage = function (a) {
-	return {$: 'FeatureListPage', a: a};
+var author$project$Main$AddFeaturePage = function (a) {
+	return {$: 'AddFeaturePage', a: a};
 };
 var elm$core$Basics$False = {$: 'False'};
 var elm$core$Basics$True = {$: 'True'};
@@ -4987,6 +4987,24 @@ var elm$json$Json$Decode$errorToStringHelp = F2(
 		}
 	});
 var elm$core$Platform$Cmd$map = _Platform_map;
+var author$project$Main$addFeature = F2(
+	function (model, _n0) {
+		var addModel = _n0.a;
+		var cmds = _n0.b;
+		return _Utils_Tuple2(
+			_Utils_update(
+				model,
+				{
+					page: author$project$Main$AddFeaturePage(addModel)
+				}),
+			A2(elm$core$Platform$Cmd$map, author$project$Main$AddFeatureMsg, cmds));
+	});
+var author$project$Main$FeatureListMsg = function (a) {
+	return {$: 'FeatureListMsg', a: a};
+};
+var author$project$Main$FeatureListPage = function (a) {
+	return {$: 'FeatureListPage', a: a};
+};
 var author$project$Main$featureList = F2(
 	function (model, _n0) {
 		var features = _n0.a;
@@ -5114,6 +5132,15 @@ var author$project$Main$route = F2(
 	function (parser, handler) {
 		return A2(elm$url$Url$Parser$map, handler, parser);
 	});
+var author$project$Page$AddFeature$Model = F3(
+	function (name, description, errorMsg) {
+		return {description: description, errorMsg: errorMsg, name: name};
+	});
+var elm$core$Platform$Cmd$batch = _Platform_batch;
+var elm$core$Platform$Cmd$none = elm$core$Platform$Cmd$batch(_List_Nil);
+var author$project$Page$AddFeature$init = _Utils_Tuple2(
+	A3(author$project$Page$AddFeature$Model, '', '', ''),
+	elm$core$Platform$Cmd$none);
 var author$project$Page$FeatureList$Model = function (features) {
 	return {features: features};
 };
@@ -5881,6 +5908,32 @@ var elm$url$Url$Parser$oneOf = function (parsers) {
 				parsers);
 		});
 };
+var elm$url$Url$Parser$s = function (str) {
+	return elm$url$Url$Parser$Parser(
+		function (_n0) {
+			var visited = _n0.visited;
+			var unvisited = _n0.unvisited;
+			var params = _n0.params;
+			var frag = _n0.frag;
+			var value = _n0.value;
+			if (!unvisited.b) {
+				return _List_Nil;
+			} else {
+				var next = unvisited.a;
+				var rest = unvisited.b;
+				return _Utils_eq(next, str) ? _List_fromArray(
+					[
+						A5(
+						elm$url$Url$Parser$State,
+						A2(elm$core$List$cons, next, visited),
+						rest,
+						params,
+						frag,
+						value)
+					]) : _List_Nil;
+			}
+		});
+};
 var elm$url$Url$Parser$top = elm$url$Url$Parser$Parser(
 	function (state) {
 		return _List_fromArray(
@@ -5893,11 +5946,13 @@ var author$project$Main$routeParser = function (model) {
 				A2(
 				author$project$Main$route,
 				elm$url$Url$Parser$top,
-				A2(author$project$Main$featureList, model, author$project$Page$FeatureList$init))
+				A2(author$project$Main$featureList, model, author$project$Page$FeatureList$init)),
+				A2(
+				author$project$Main$route,
+				elm$url$Url$Parser$s('add'),
+				A2(author$project$Main$addFeature, model, author$project$Page$AddFeature$init))
 			]));
 };
-var elm$core$Platform$Cmd$batch = _Platform_batch;
-var elm$core$Platform$Cmd$none = elm$core$Platform$Cmd$batch(_List_Nil);
 var elm$url$Url$Parser$getFirstMatch = function (states) {
 	getFirstMatch:
 	while (true) {
@@ -6042,63 +6097,66 @@ var elm$core$Platform$Sub$none = elm$core$Platform$Sub$batch(_List_Nil);
 var author$project$Main$subscriptions = function (_n0) {
 	return elm$core$Platform$Sub$none;
 };
-var author$project$Page$FeatureList$DeleteFeature = function (a) {
-	return {$: 'DeleteFeature', a: a};
+var author$project$Page$AddFeature$AddFeature = function (a) {
+	return {$: 'AddFeature', a: a};
 };
-var author$project$Page$FeatureList$deleteFeature = function (id) {
+var elm$http$Http$Internal$StringBody = F2(
+	function (a, b) {
+		return {$: 'StringBody', a: a, b: b};
+	});
+var elm$http$Http$jsonBody = function (value) {
+	return A2(
+		elm$http$Http$Internal$StringBody,
+		'application/json',
+		A2(elm$json$Json$Encode$encode, 0, value));
+};
+var elm$http$Http$post = F3(
+	function (url, body, decoder) {
+		return elm$http$Http$request(
+			{
+				body: body,
+				expect: elm$http$Http$expectJson(decoder),
+				headers: _List_Nil,
+				method: 'POST',
+				timeout: elm$core$Maybe$Nothing,
+				url: url,
+				withCredentials: false
+			});
+	});
+var elm$json$Json$Encode$object = function (pairs) {
+	return _Json_wrap(
+		A3(
+			elm$core$List$foldl,
+			F2(
+				function (_n0, obj) {
+					var k = _n0.a;
+					var v = _n0.b;
+					return A3(_Json_addField, k, v, obj);
+				}),
+			_Json_emptyObject(_Utils_Tuple0),
+			pairs));
+};
+var elm$json$Json$Encode$string = _Json_wrap;
+var author$project$Page$AddFeature$addFeature = function (model) {
 	return A2(
 		elm$http$Http$send,
-		author$project$Page$FeatureList$DeleteFeature,
-		elm$http$Http$request(
-			{
-				body: elm$http$Http$emptyBody,
-				expect: elm$http$Http$expectStringResponse(
-					function (_n0) {
-						return elm$core$Result$Ok(_Utils_Tuple0);
-					}),
-				headers: _List_Nil,
-				method: 'DELETE',
-				timeout: elm$core$Maybe$Nothing,
-				url: '/api/feature/' + elm$core$String$fromInt(id),
-				withCredentials: false
-			}));
+		author$project$Page$AddFeature$AddFeature,
+		A3(
+			elm$http$Http$post,
+			'/api/feature',
+			elm$http$Http$jsonBody(
+				elm$json$Json$Encode$object(
+					_List_fromArray(
+						[
+							_Utils_Tuple2(
+							'name',
+							elm$json$Json$Encode$string(model.name)),
+							_Utils_Tuple2(
+							'description',
+							elm$json$Json$Encode$string(model.description))
+						]))),
+			author$project$Page$FeatureList$featureDecoder));
 };
-var elm$core$Debug$log = _Debug_log;
-var author$project$Page$FeatureList$update = F2(
-	function (msg, model) {
-		switch (msg.$) {
-			case 'RetrieveFeatures':
-				var result = msg.a;
-				if (result.$ === 'Ok') {
-					var features = result.a;
-					return _Utils_Tuple2(
-						_Utils_update(
-							model,
-							{features: features}),
-						elm$core$Platform$Cmd$none);
-				} else {
-					return A2(
-						elm$core$Debug$log,
-						'Failed to retrieve features',
-						_Utils_Tuple2(model, elm$core$Platform$Cmd$none));
-				}
-			case 'DeletePressed':
-				var id = msg.a;
-				return _Utils_Tuple2(
-					model,
-					author$project$Page$FeatureList$deleteFeature(id));
-			default:
-				var result = msg.a;
-				if (result.$ === 'Ok') {
-					return _Utils_Tuple2(model, author$project$Page$FeatureList$retrieveFeatures);
-				} else {
-					return A2(
-						elm$core$Debug$log,
-						'Failed to delete feature',
-						_Utils_Tuple2(model, elm$core$Platform$Cmd$none));
-				}
-		}
-	});
 var elm$browser$Browser$External = function (a) {
 	return {$: 'External', a: a};
 };
@@ -6267,6 +6325,125 @@ var elm$url$Url$fromString = function (str) {
 		A2(elm$core$String$dropLeft, 8, str)) : elm$core$Maybe$Nothing);
 };
 var elm$browser$Browser$Navigation$load = _Browser_load;
+var elm$url$Url$Builder$toQueryPair = function (_n0) {
+	var key = _n0.a;
+	var value = _n0.b;
+	return key + ('=' + value);
+};
+var elm$url$Url$Builder$toQuery = function (parameters) {
+	if (!parameters.b) {
+		return '';
+	} else {
+		return '?' + A2(
+			elm$core$String$join,
+			'&',
+			A2(elm$core$List$map, elm$url$Url$Builder$toQueryPair, parameters));
+	}
+};
+var elm$url$Url$Builder$relative = F2(
+	function (pathSegments, parameters) {
+		return _Utils_ap(
+			A2(elm$core$String$join, '/', pathSegments),
+			elm$url$Url$Builder$toQuery(parameters));
+	});
+var author$project$Page$AddFeature$update = F2(
+	function (msg, model) {
+		switch (msg.$) {
+			case 'Name':
+				var name = msg.a;
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{name: name}),
+					elm$core$Platform$Cmd$none);
+			case 'Description':
+				var description = msg.a;
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{description: description}),
+					elm$core$Platform$Cmd$none);
+			case 'ClickSubmit':
+				return _Utils_Tuple2(
+					model,
+					author$project$Page$AddFeature$addFeature(model));
+			default:
+				var result = msg.a;
+				if (result.$ === 'Ok') {
+					return _Utils_Tuple2(
+						model,
+						elm$browser$Browser$Navigation$load(
+							A2(
+								elm$url$Url$Builder$relative,
+								_List_fromArray(
+									['/']),
+								_List_Nil)));
+				} else {
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{errorMsg: 'Failed to add'}),
+						elm$core$Platform$Cmd$none);
+				}
+		}
+	});
+var author$project$Page$FeatureList$DeleteFeature = function (a) {
+	return {$: 'DeleteFeature', a: a};
+};
+var author$project$Page$FeatureList$deleteFeature = function (id) {
+	return A2(
+		elm$http$Http$send,
+		author$project$Page$FeatureList$DeleteFeature,
+		elm$http$Http$request(
+			{
+				body: elm$http$Http$emptyBody,
+				expect: elm$http$Http$expectStringResponse(
+					function (_n0) {
+						return elm$core$Result$Ok(_Utils_Tuple0);
+					}),
+				headers: _List_Nil,
+				method: 'DELETE',
+				timeout: elm$core$Maybe$Nothing,
+				url: '/api/feature/' + elm$core$String$fromInt(id),
+				withCredentials: false
+			}));
+};
+var elm$core$Debug$log = _Debug_log;
+var author$project$Page$FeatureList$update = F2(
+	function (msg, model) {
+		switch (msg.$) {
+			case 'RetrieveFeatures':
+				var result = msg.a;
+				if (result.$ === 'Ok') {
+					var features = result.a;
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{features: features}),
+						elm$core$Platform$Cmd$none);
+				} else {
+					return A2(
+						elm$core$Debug$log,
+						'Failed to retrieve features',
+						_Utils_Tuple2(model, elm$core$Platform$Cmd$none));
+				}
+			case 'DeletePressed':
+				var id = msg.a;
+				return _Utils_Tuple2(
+					model,
+					author$project$Page$FeatureList$deleteFeature(id));
+			default:
+				var result = msg.a;
+				if (result.$ === 'Ok') {
+					return _Utils_Tuple2(model, author$project$Page$FeatureList$retrieveFeatures);
+				} else {
+					return A2(
+						elm$core$Debug$log,
+						'Failed to delete feature',
+						_Utils_Tuple2(model, elm$core$Platform$Cmd$none));
+				}
+		}
+	});
 var elm$browser$Browser$Navigation$pushUrl = _Browser_pushUrl;
 var elm$url$Url$addPort = F2(
 	function (maybePort, starter) {
@@ -6329,6 +6506,18 @@ var author$project$Main$update = F2(
 				} else {
 					return _Utils_Tuple2(model, elm$core$Platform$Cmd$none);
 				}
+			case 'AddFeatureMsg':
+				var message = msg.a;
+				var _n2 = model.page;
+				if (_n2.$ === 'AddFeaturePage') {
+					var pageModel = _n2.a;
+					return A2(
+						author$project$Main$addFeature,
+						model,
+						A2(author$project$Page$AddFeature$update, message, pageModel));
+				} else {
+					return _Utils_Tuple2(model, elm$core$Platform$Cmd$none);
+				}
 			case 'LinkClicked':
 				var urlRequest = msg.a;
 				if (urlRequest.$ === 'Internal') {
@@ -6350,14 +6539,27 @@ var author$project$Main$update = F2(
 				return A2(author$project$Main$selectRoute, url, model);
 		}
 	});
-var author$project$Page$FeatureList$DeletePressed = function (a) {
-	return {$: 'DeletePressed', a: a};
+var author$project$Page$AddFeature$ClickSubmit = {$: 'ClickSubmit'};
+var author$project$Page$AddFeature$Description = function (a) {
+	return {$: 'Description', a: a};
 };
-var elm$html$Html$button = _VirtualDom_node('button');
-var elm$html$Html$td = _VirtualDom_node('td');
+var author$project$Page$AddFeature$Name = function (a) {
+	return {$: 'Name', a: a};
+};
+var elm$html$Html$h1 = _VirtualDom_node('h1');
+var elm$html$Html$input = _VirtualDom_node('input');
 var elm$virtual_dom$VirtualDom$text = _VirtualDom_text;
 var elm$html$Html$text = elm$virtual_dom$VirtualDom$text;
-var elm$html$Html$tr = _VirtualDom_node('tr');
+var elm$html$Html$Attributes$stringProperty = F2(
+	function (key, string) {
+		return A2(
+			_VirtualDom_property,
+			key,
+			elm$json$Json$Encode$string(string));
+	});
+var elm$html$Html$Attributes$placeholder = elm$html$Html$Attributes$stringProperty('placeholder');
+var elm$html$Html$Attributes$type_ = elm$html$Html$Attributes$stringProperty('type');
+var elm$html$Html$Attributes$value = elm$html$Html$Attributes$stringProperty('value');
 var elm$virtual_dom$VirtualDom$Normal = function (a) {
 	return {$: 'Normal', a: a};
 };
@@ -6375,6 +6577,87 @@ var elm$html$Html$Events$onClick = function (msg) {
 		'click',
 		elm$json$Json$Decode$succeed(msg));
 };
+var elm$html$Html$Events$alwaysStop = function (x) {
+	return _Utils_Tuple2(x, true);
+};
+var elm$virtual_dom$VirtualDom$MayStopPropagation = function (a) {
+	return {$: 'MayStopPropagation', a: a};
+};
+var elm$html$Html$Events$stopPropagationOn = F2(
+	function (event, decoder) {
+		return A2(
+			elm$virtual_dom$VirtualDom$on,
+			event,
+			elm$virtual_dom$VirtualDom$MayStopPropagation(decoder));
+	});
+var elm$json$Json$Decode$at = F2(
+	function (fields, decoder) {
+		return A3(elm$core$List$foldr, elm$json$Json$Decode$field, decoder, fields);
+	});
+var elm$html$Html$Events$targetValue = A2(
+	elm$json$Json$Decode$at,
+	_List_fromArray(
+		['target', 'value']),
+	elm$json$Json$Decode$string);
+var elm$html$Html$Events$onInput = function (tagger) {
+	return A2(
+		elm$html$Html$Events$stopPropagationOn,
+		'input',
+		A2(
+			elm$json$Json$Decode$map,
+			elm$html$Html$Events$alwaysStop,
+			A2(elm$json$Json$Decode$map, tagger, elm$html$Html$Events$targetValue)));
+};
+var author$project$Page$AddFeature$view = function (model) {
+	return {
+		body: _List_fromArray(
+			[
+				A2(
+				elm$html$Html$h1,
+				_List_Nil,
+				_List_fromArray(
+					[
+						elm$html$Html$text('Add Feature')
+					])),
+				A2(
+				elm$html$Html$input,
+				_List_fromArray(
+					[
+						elm$html$Html$Attributes$type_('text'),
+						elm$html$Html$Attributes$placeholder('Name'),
+						elm$html$Html$Attributes$value(model.name),
+						elm$html$Html$Events$onInput(author$project$Page$AddFeature$Name)
+					]),
+				_List_Nil),
+				A2(
+				elm$html$Html$input,
+				_List_fromArray(
+					[
+						elm$html$Html$Attributes$type_('text'),
+						elm$html$Html$Attributes$placeholder('Description'),
+						elm$html$Html$Attributes$value(model.description),
+						elm$html$Html$Events$onInput(author$project$Page$AddFeature$Description)
+					]),
+				_List_Nil),
+				A2(
+				elm$html$Html$input,
+				_List_fromArray(
+					[
+						elm$html$Html$Attributes$type_('button'),
+						elm$html$Html$Attributes$value('Submit'),
+						elm$html$Html$Events$onClick(author$project$Page$AddFeature$ClickSubmit)
+					]),
+				_List_Nil)
+			]),
+		title: 'Add Feature'
+	};
+};
+var author$project$Page$FeatureList$DeletePressed = function (a) {
+	return {$: 'DeletePressed', a: a};
+};
+var elm$html$Html$button = _VirtualDom_node('button');
+var elm$html$Html$td = _VirtualDom_node('td');
+var elm$html$Html$tr = _VirtualDom_node('tr');
 var author$project$Page$FeatureList$featureRow = function (maybeFeat) {
 	if (maybeFeat.$ === 'Just') {
 		var feat = maybeFeat.a;
@@ -6427,10 +6710,16 @@ var author$project$Page$FeatureList$featureRow = function (maybeFeat) {
 		return elm$html$Html$text('');
 	}
 };
-var elm$html$Html$h1 = _VirtualDom_node('h1');
+var elm$html$Html$a = _VirtualDom_node('a');
 var elm$html$Html$table = _VirtualDom_node('table');
 var elm$html$Html$th = _VirtualDom_node('th');
 var elm$html$Html$thead = _VirtualDom_node('thead');
+var elm$html$Html$Attributes$href = function (url) {
+	return A2(
+		elm$html$Html$Attributes$stringProperty,
+		'href',
+		_VirtualDom_noJavaScriptUri(url));
+};
 var elm$virtual_dom$VirtualDom$style = _VirtualDom_style;
 var elm$html$Html$Attributes$style = elm$virtual_dom$VirtualDom$style;
 var author$project$Page$FeatureList$view = function (model) {
@@ -6489,7 +6778,17 @@ var author$project$Page$FeatureList$view = function (model) {
 										]))
 								]))
 						]),
-					A2(elm$core$List$map, author$project$Page$FeatureList$featureRow, model.features)))
+					A2(elm$core$List$map, author$project$Page$FeatureList$featureRow, model.features))),
+				A2(
+				elm$html$Html$a,
+				_List_fromArray(
+					[
+						elm$html$Html$Attributes$href('/add')
+					]),
+				_List_fromArray(
+					[
+						elm$html$Html$text('Add')
+					]))
 			]),
 		title: 'Feature List'
 	};
@@ -6530,8 +6829,12 @@ var author$project$Main$view = function (model) {
 				author$project$Skeleton$view,
 				author$project$Main$FeatureListMsg,
 				author$project$Page$FeatureList$view(featurelistModel));
-		case 'AddFeature':
-			return author$project$Page$NotFound$view(elm$core$Basics$never);
+		case 'AddFeaturePage':
+			var addFeatureModel = _n0.a;
+			return A2(
+				author$project$Skeleton$view,
+				author$project$Main$AddFeatureMsg,
+				author$project$Page$AddFeature$view(addFeatureModel));
 		default:
 			return author$project$Page$NotFound$view(elm$core$Basics$never);
 	}
